[package]
name = "rust_portscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
eyre = "0.6.12"
inquire = "0.7.5"
log = "0.4.22"
ping = "0.5.2"
rand = "0.8.5"
regex = "1.10.5"
terminal-menu = "3.0.0"
tokio = {version = "1.38.0", features = ["full"]}